k8s-ingress-traffic-mirror/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  annotations:
    nginx.ingress.kubernetes.io/mirror-target: "http://shadow-service.default.svc.cluster.local:8080$request_uri"
    nginx.ingress.kubernetes.io/mirror-request-body: "off"
spec:
  rules:
    - host: application-ingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 8080
